<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="4dp"
            android:background="@color/colorPrimary">
        <ImageButton
                android:id="@+id/back"
                tools:pop="true"
                tools:onStack="tabs;root"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/back"/>
        <TextView
                android:id="@+id/title"
                tools:text="View Title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/foregroundBar"
                android:layout_margin="4dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
    </LinearLayout>

    <com.lightningkite.khrysalis.views.android.SwapView
            android:id="@+id/rootStackHolder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:stackId="tabs"
            tools:stackDefault="@layout/home"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ToggleButton
                android:id="@+id/home"
                style="@style/TabButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/home"
                android:textOff="@string/home"
                android:checked="true"
                android:drawableTop="@drawable/ic_home"
                tools:reset="@layout/home"
                tools:onStack="tabs"
                />

        <ToggleButton
                android:id="@+id/setup_khrysalis"
                style="@style/TabButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/set_up"
                android:textOff="@string/set_up"
                android:drawableTop="@drawable/ic_settings"
                tools:reset="@layout/setup"
                tools:onStack="tabs"
                />

        <ToggleButton
                android:id="@+id/faq"
                style="@style/TabButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/faq"
                android:textOff="@string/faq"
                android:drawableTop="@drawable/ic_question_answer"
                tools:reset="@layout/faq"
                tools:onStack="tabs"
                />

        <ToggleButton
                android:id="@+id/docs"
                style="@style/TabButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/docs"
                android:textOff="@string/docs"
                android:drawableTop="@drawable/ic_code"
                tools:reset="@layout/docs"
                tools:onStack="tabs"
                />
    </LinearLayout>

</LinearLayout>